--- a/style.css
+++ b/style.css
@@ -1,120 +1,26 @@
-body{
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0;
-    padding: 20;
-    background-color: #1a1a1a;
-}
-.nav-container{
-    margin-bottom: 40px;
-
-}
-h2{
-    margin-bottom: 20px;
-}
-.nav1{
-    background-color: #f8f9fa;
-    padding: 10px;
-}
-.nav1 ul {
-    list-style-type: none;
-    display: flex;
-    justify-content: space-around;
-    margin: 0;
-    padding: 0;
-}
-.nav1 li{
-    display: inline;
-}
-.nav1 a {
-    text-decoration: none;
-    color: rgb(3, 150, 50);
-    /* background-color: yellow; */
-    padding: 5px 15px;
-    position: relative;
-}
-.nav1 a::after {
-    content: "";
-    position: absolute;
-    height: 2px;
-    width: 100%;
-    bottom: 0;
-    left: 0;
-    background-color: rgb(10, 144, 117);
-    transform: scaleX(0);
-    transition: transform 0.3s ease-in-out;
+.grid-container{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    /* grid-template-columns: 1fr 1fr 1fr; */
+    grid-template-rows: 100px 200px 100px;
+    gap: 4px;
 }
 
-.nav1 a:hover::after{
-    transform: scaleX(1);
+
+.item {
+    background-color: orange;
+    border: 1px solid black;
 }
 
-.nav1 .login-btn{
-    background-color: rgb(16, 126, 106);
-    color: white;
-    border: none;
-    padding: 5px 15px;
-    border-radius: 5px;
-    cursor: pointer;
+.item1{
+    grid-column: 1/3;
+    grid-row: 1/2;
 }
-.nav2{
-    background-color: #013a34;
-    width: 200px;
-    padding: 20px;
+.item2{
+    grid-column: 3/4;
+    grid-row: 1/3;
 }
-.nav2 ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+.item6{
+    grid-column: 2/4;
 }
-.nav2 li {
-    margin-bottom: 12px;
-}
-.nav2 a{
-    text-decoration: none;
-    color: white;
-    display: block;
-    padding: 10px;
-    width: 100%;
-}
-.nav2 a:hover{
-    background-color: #0e8e14;
-}
-.nav2 .login-btn{
-    background-color: #03460c;
-    color: #fff;
-    border: none;
-    width: 100%;
-    padding: 10px;
-    cursor: pointer;    
-}
-.nav2 .login-btn:hover {
-    background-color: #279b10;
-    border: 1px solid white;
-}
-.nav3 {
-    background-color: #4ad85b;
-    padding: 10px;
-}
-.nav3 ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;    
-}
-.nav3 a {
-    text-decoration: none;
-    color: #d8ecea;
-    padding: 10px;
-    display: block  ;
-}
-.nav3 .dropdown-content{
-    display: none;
-}
-.nav3 .dropdown:hover .dropdown-content{
-    display: block;
-    position: absolute;
-    background-color: #0a7c5a;
-    min-width: 150px;
-}
+
